# ShoppingList

./: .clang-format  AddItemPopup.qml  CMakeLists.txt  InformationDrawer.qml  README.md  ShoppingList.pro  build.bat  clipboard.h  debug.bat  images.qrc  listmodel.cpp  listmodel.h  main.cpp  main.qml  qml.qrc  test.bat
android/: AndroidManifest.xml
src/: AndroidManifest.xml  CMakeLists.txt  ShoppingList.pro  clipboard.cpp  images.qrc  item.cpp  item.h  listmodel.cpp  listmodel.h  main.cpp  qml.qrc
src/gui/: Main.qml  QmlClipboard.cpp  QmlClipboard.h  QmlItem.cpp  QmlItem.h
src/gui/components/: AddItemPopup.qml  InformationDrawer.qml
src/gui/models/: listmodel.cpp  listmodel.h
src/gui/views/: Home.qml
src/qml/: InformationDrawer.qml  main.qml
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  testTemplate.cpp
